<resources>
    <string name="app_name">NewsPagesManagement</string>
    <!--    nav_title-->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="bookmark">Bookmark</string>
    <string name="notification">Notification</string>

    <!--    tab_title-->
    <string name="tab1">Top</string>
    <string name="tab2">Cones</string>
    <string name="tab3">Cups</string>
    <string name="tab4">Ice Pops</string>
    <string name="tab5">Sticks</string>

    <!--    constant-->
    <string name="product_id">ImageDetailsID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="error_happened">Có lỗi xảy ra</string>
    <string name="error">Lỗi</string>
    <string name="ok">Ok</string>
    <string name="no_internet_connection">Không có kết nối Internet</string>
    <string name="time_out">Timeout</string>
    <string name="no_data">Không có dữ liệu</string>
</resources>
